# gasworks

./: .goreleaser.yaml  MIGRATION.md  README.md  TESTING.md  go.mod  go.sum  pyproject.toml
.github/workflows/: cli-ci.yml  go-ci.yml  release.yml  remove-needs-info.yml  remove-needs-triage.yml  triage-label.yml
cmd/gasworks/: cli_test.go  gettoken.go  io.go  login.go  logout.go  main.go  store_helpers_test.go  whoami.go
cmd/gasworks-forwarder/: main.go  main_test.go
internal/config/: config.go  config_test.go
internal/dpop/: dpop.go  dpop_test.go
internal/eventsaxis/: content_test.go  eventsaxis.go  eventsaxis_test.go  runner.go  source.go
internal/httpc/: httpc.go  httpc_test.go
internal/jwtutil/: jwtutil.go  jwtutil_test.go
internal/oidc/: browser_test.go  oidc.go  oidc_test.go
internal/recallaxis/: fnmatch.go  forward.go  paths.go  read_unix.go  read_windows.go  recallaxis.go  recallaxis_test.go  scan.go  sidecar_security_test.go  sidecar_test.go  state.go
internal/saauth/: saauth.go  saauth_test.go  saauth_unix.go  saauth_windows.go
internal/store/: lock_unix.go  lock_windows.go  store.go  store_test.go  store_unix.go  store_windows.go
internal/sts/: decode.go  sts.go  sts_test.go
internal/usageaxis/: fileid_other.go  fileid_unix.go  runner.go  runner_test.go  source.go  source_test.go  state.go  usageaxis.go
internal/version/: version.go
src/gasworks/: __init__.py  cli.py  config.py  dpop.py  httpc.py  jwtutil.py  oidc.py  store.py  sts.py
tests/: conftest.py  test_cli.py  test_dpop.py  test_flows.py  test_store.py
