[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gasworks"
version = "0.1.0"
description = "gasworks CLI — SSO login + getToken (RFC 8693 EIA minting) for the Gas City credential plane"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gas City" }]
keywords = ["sts", "oauth", "dpop", "rfc8693", "eia", "gascity"]
# DPoP requires ES256 asymmetric signing, which the stdlib cannot do — cryptography is the
# one and only runtime dependency. HTTP is stdlib urllib (with a custom User-Agent).
dependencies = ["cryptography>=3.4"]

[project.urls]
Homepage = "https://github.com/gascity/gasworks"
Issues = "https://github.com/gascity/gasworks/issues"

[project.scripts]
gasworks = "gasworks.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
